tests/errors/sem_redefine1.java
public class sem_redefine1 {
    public static String a;

    public static int a;

    public static int a = 3;
}
